--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@tanstack/react-query": "^5.90.10",
+    "canvas-confetti": "^1.9.4",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
